# BlockTypeSupportsBasicCommunication

./: BlockTypeSupportsBasicCommunicationSupportConfig.cmake.in  CMakeLists.txt  README.md  basic_blocks_communication.pslkblp.yaml.in  basic_blocks_communication.pslkp.yaml.in  basic_communication_support.pslkbtsp.yaml.in
src/: BlockFactoryCommunication.h  CMakeLists.txt  ICommunicationChannel.h  JsonParser.h  LoggerInstance.cpp  LoggerInstance.h  OPCUAServerChannel.cpp  OPCUAServerChannel.h  OPCUAServerSimulationBlock.h  ReadValueSimulationBlock.h  RegisterBlockFactories.cpp  WriteValueSimulationBlock.h
